feat(web): pantalla de puzzles, reutilizando el tablero de la partida en vivo, usar BACKEND_HTTP_URL en las llamadas REST de puzzles, no rutas relativas; feat(backend): sembrar puzzles conocidos al arrancar, para no depender solo de partidas jugadas, la jugada de mate ya no impide detectar errores anteriores en la partida